--- a/requirements.txt
+++ b/requirements.txt
@@ -16,6 +16,7 @@ Jinja2==3.1.4
 Mako==1.3.5
 MarkupSafe==2.1.5
 packaging==25.0
+PyMySQL==1.1.2
 pyotp==2.9.0
 pypng==0.20220715.0
 python-dotenv==1.0.1
