--- a/requirements.txt
+++ b/requirements.txt
@@ -1,8 +1,10 @@
 alembic==1.13.1
 bcrypt==5.0.0
 blinker==1.8.2
+cffi==2.0.0
 click==8.1.7
 colorama==0.4.6
+cryptography==46.0.3
 Flask==3.0.3
 Flask-Bcrypt==1.0.1
 Flask-Login==0.6.3
@@ -16,12 +18,13 @@ Jinja2==3.1.4
 Mako==1.3.5
 MarkupSafe==2.1.5
 packaging==25.0
+pycparser==2.23
 PyMySQL==1.1.2
 pyotp==2.9.0
 pypng==0.20220715.0
 python-dotenv==1.0.1
 qrcode==7.4.2
 SQLAlchemy==2.0.30
-typing_extensions==4.12.0
+typing_extensions==4.15.0
 Werkzeug==3.0.3
 WTForms==3.1.2
